# pavedroad-playbook

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: __init__.py
data/kestrel/: README.md  __init__.py  generator.py  invoices.py  models.py
docs/: evals.md
docs/architecture/: 0001-deterministic-first-entity-resolution.md  orchestration-topology.md
examples/: quickstart.py
playbook/: AI_DILIGENCE_SCORECARD.md  ENTERPRISE_AI_PLAYBOOK.md
src/adapters/: __init__.py  anthropic_provider.py  base.py  local.py  openai_compat.py  pricing.py  registry.py
src/evals/: __init__.py  cost_frontier.py  entity_resolution.py  golden.py  reconciliation.py
src/interop/: __init__.py  dates.py  deterministic.py  llm_resolution.py  models.py  normalize.py  resolve.py  review_queue.py  sanitize.py  tools.py
src/orchestration/: __init__.py  agents.py  guardrails.py  models.py  pipeline.py  routing.py  routing.yaml  state_store.py
tests/: test_scaffold.py
tests/adapters/: test_anthropic_provider.py  test_local.py  test_openai_compat.py  test_pricing.py  test_registry.py
tests/data/: test_invoices.py  test_kestrel_generator.py
tests/evals/: test_cost_frontier.py  test_entity_resolution.py  test_reconciliation.py  test_regression_gates.py
tests/interop/: test_dates.py  test_deterministic.py  test_llm_resolution.py  test_normalize.py  test_resolve.py  test_review_queue.py  test_sanitize.py  test_tools.py
tests/orchestration/: test_agents.py  test_guardrails.py  test_pipeline.py  test_routing.py  test_state_store.py
(+2 files in other folders)
