[project]
name = "paved-road"
version = "0.1.0"
description = "Reference implementation and operating playbook for AI enablement in PE portfolio companies"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Sonia Mehta" }]
dependencies = [
    "anthropic>=0.50",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interop", "src/orchestration", "src/evals", "src/adapters"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "data"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "RUF", # ruff-specific
]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
files = ["src", "data", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
pythonpath = ["src", "."]
markers = [
    "eval_gate: regression evals that must pass before merge (run in CI)",
]
